refactor(member): DTO List 매핑을 DTO에서 수행하도록 이동